--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     hibernate:
       format-sql: true
       highlight-sql: true
-      ddl-auto: create
+      ddl-auto: update
 
       dialect: org.hibernate.dialect.MySQLDialect # ??? ??
     properties:
