--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,9 +19,17 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: create
-
     properties:
       hibernate:
+        show_sql: true
+        format_sql: true
+    logging:
+      level:
+        org:
+          hibernate:
+            type:
+              descriptor:
+                sql: trace
 
   sql:
     init:
