--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -17,6 +17,12 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      LOCAL_POSTGRESQL_HOST: ${{ secrets.POSTGRESQL_HOST }}
+      LOCAL_POSTGRESQL_PORT: ${{ secrets.POSTGRESQL_PORT }}
+      DB_NAME: ${{ secrets.DB_NAME }}
+      LOCAL_POSTGRESQL_USERNAME: ${{ secrets.POSTGRESQL_USERNAME }}
+      LOCAL_POSTGRESQL_PASSWORD: ${{ secrets.POSTGRESQL_PASSWORD }}
     permissions:
       contents: read
 
@@ -32,24 +38,21 @@ jobs:
       # See: https://github.com/gradle/actions/blob/main/setup-gradle/README.md
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
-      - name: Set YML
-        run: |
-          echo "${{ secrets.APPLICATION_YML_DEPLOY }}" | base64 --decode > src/main/resources/application.yml
-          find src
+
       - name: Build with Gradle Wrapper
         run: ./gradlew build -x test
-      - name: docker image build
-        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:haetsal-deploy
-      # DockerHub Login (push 하기 위해)
-      - name: docker login
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      # Docker hub 로 push
-      - name: Docker Hub push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:haetsal-deploy
+#      - name: docker image build
+#        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:haetsal-deploy
+#      # DockerHub Login (push 하기 위해)
+#      - name: docker login
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+#
+#      # Docker hub 로 push
+#      - name: Docker Hub push
+#        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:haetsal-deploy
 #  deploy:
 #    needs: build
 #    runs-on: ubuntu-latest
