--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -51,27 +51,27 @@ jobs:
       # Docker hub 로 push
       - name: Docker Hub push
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:appmanager-deploy
-#  deploy:
-#    needs: build
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Login to Docker Hub
-#        run: sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-#
-#      -  name: Deploy
-#         uses: appleboy/ssh-action@v0.1.6
-#         with:
-#           host: ${{ secrets.SSH_IP }}
-#           username: ${{ secrets.SSH_USER }}
-#           key: ${{ secrets.SSH_PASSWORD }}
-#           port: 22
-#           script: |
-#             sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-#             if [ $(sudo docker ps -q -f name=haetsal) ]; then
-#               sudo docker stop haetsal
-#               sudo docker rm haetsal
-#             fi
-#             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:haetsal-deploy
-#             sudo docker run -d --restart always -p 8000:8000 --network root_eum_network --name haetsal ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:haetsal-deploy
-#             sudo docker image prune -f
-#             ps -ef | grep java
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Login to Docker Hub
+        run: sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      -  name: Deploy
+         uses: appleboy/ssh-action@v0.1.6
+         with:
+           host: ${{ secrets.SSH_IP }}
+           username: ${{ secrets.SSH_USER }}
+           key: ${{ secrets.SSH_PASSWORD }}
+           port: 22
+           script: |
+             sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+             if [ $(sudo docker ps -q -f name=appmanager) ]; then
+               sudo docker stop appmanager
+               sudo docker rm appmanager
+             fi
+             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:appmanager-deploy
+             sudo docker run -d --restart always -p 8080:8080  --name appmanager ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKER_REPO }}:appmanager-deploy
+             sudo docker image prune -f
+             ps -ef | grep java
